# IapDominoCaFoscari

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  fragments.h  functions.h  iap  main.c  makefile
doxygen/html/: files.html  functions_8h.html  functions_8h_source.html  globals.html  globals_func.html  globals_vars.html  index.html  main_8c.html
doxygen/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  files_0.js  functions_0.js  functions_1.js  searchdata.js  variables_0.js
doxygen/latex/: files.tex  functions_8h.tex  functions_8h_source.tex  main_8c.tex  refman.tex
fragments/: 1.c  2.c  3.c  4.c  5.c
functions/: ai.c  alertBoxHandler.c  challangeHandler.c  challengeHandler.c  colorzz.h  initialization.c  initialization.h  intro_message.c  intro_message.h  terminal_handler.c  terminal_handler.h  tiles_generator.c  tiles_ui_handler.c
